package sk.uniza.fri;

/**
 * 26. 2. 2021 - 19:42
 *
 * @author adaha
 * Z tadeto je spúšťaná celá hra.
 */
public class Main {
    public static void main(String[] args) {
        DobrodruznaHra.dajInstanciu();
    }
}
